- Fixed parsing issues with IE7 - Fixed invisible thumbs in IE8

--- a/site/media/css/eventgallery.css
+++ b/site/media/css/eventgallery.css
@@ -158,6 +158,12 @@
 	padding-left: 10px;
 }
 
+.thumbnail img.lazyme,
+.cart-item img,
+.ajaxpaging .thumbs .thumbnail img {
+	/* IE8 fix to show images*/
+	max-width: none;
+}
 
 /* Event - Default */
 
